[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Turrets/He3adshots/BaseTurretHeadshot.png" type="Texture" id=1]
[ext_resource path="res://Fonts/GravityBold8.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/HUD/DisplayBox.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HUD/DisplayBox_Pressed.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainLevel/HUD/TurretDisplayControl.gd" type="Script" id=5]
[ext_resource path="res://Sprites/HUD/Tabs.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0.466667, 0.294118, 0.960784, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0.466667, 0.294118, 0.960784, 1 )
extra_spacing_bottom = 2
font_data = ExtResource( 2 )

[node name="TurretDisplayButton" type="TextureButton"]
margin_right = 60.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 30, 30 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
item = "machine gun"

[node name="TurretDisplayControl" type="Control" parent="."]
margin_left = 9.88216
margin_top = 11.1521
margin_right = 46.8822
margin_bottom = 46.1521
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TurretDisplayControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TurretDisplayControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.5
margin_top = 2.0
margin_right = 51.5
margin_bottom = 22.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 37, 0 )
theme = SubResource( 2 )
text = "Turret Name"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="TurretDisplayControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -44.0
margin_top = -21.6667
margin_right = 44.0
margin_bottom = -1.66666
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 44, 20 )
theme = SubResource( 2 )
text = "Cost: 000"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTexture" type="TextureRect" parent="TurretDisplayControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.5233
margin_top = -10.5232
margin_right = 18.4767
margin_bottom = 10.4768
rect_pivot_offset = Vector2( 18, 10 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Control" parent="."]
show_behind_parent = true
margin_left = 39.0479
margin_top = 8.22627
margin_right = 79.0479
margin_bottom = 48.2263
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="Info"]
margin_left = 19.4629
margin_top = 5.58933
margin_right = 97.4629
margin_bottom = 81.5893
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "health: ...
damage: ...
range: ...
Fire rate: ...
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureBackground" type="TextureRect" parent="Info/InfoLabel"]
show_behind_parent = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -52.0
margin_right = -119.0
margin_bottom = -36.0
rect_scale = Vector2( 4.4, 5.5 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBackground" type="ColorRect" parent="Info/InfoLabel"]
show_behind_parent = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -181.0
margin_top = -25.0
margin_right = -92.0
margin_bottom = 1.00002
rect_scale = Vector2( 2, 2.2 )
rect_pivot_offset = Vector2( 0, 13 )
mouse_filter = 2
color = Color( 0, 0, 0, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="." to="." method="_on_TurretDisplayButton_toggled"]
